Fix overflow to be auto instead of scroll

--- a/public/css/code.css
+++ b/public/css/code.css
@@ -17,7 +17,7 @@ p code {
 
 pre code {
 	text-wrap: nowrap !important;
-	overflow-x: scroll !important;
+	overflow-x: auto !important;
 	display: block;
 	padding: 10px 10px;
 	margin: 0 0 0 0;
